# text_editor

./: CMakeLists.txt  README.md  resources.qrc
include/: find_dialog_window.h  mainwindow.h  preferencies_dialog.h
src/: find_dialog_window.cpp  main.cpp  mainwindow.cpp  preferencies_dialog.cpp
